--- a/PulumiTestHelper/PulumiTestHelper.csproj
+++ b/PulumiTestHelper/PulumiTestHelper.csproj
@@ -7,6 +7,7 @@
         <LangVersion>latest</LangVersion>
         
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+        <IncludeBuildOutput>true</IncludeBuildOutput>
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
        
         <EnablePackageValidation>true</EnablePackageValidation>
