--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -36,7 +36,10 @@ jobs:
       with: 
         DOTNET_VERSION: 6.x
 
-    - run: dotnet pack --configuration Release --output ${{ env.NuGetDirectory }}
+    - name: Create Nuget Package
+      run: |
+        dotnet publish --configuration Release
+        dotnet pack --configuration Release --output ${{ env.NuGetDirectory }}
 
     - uses: actions/upload-artifact@v4
       with:
