--- a/PulumiTestHelper/PulumiTestHelper.csproj
+++ b/PulumiTestHelper/PulumiTestHelper.csproj
@@ -17,12 +17,12 @@
         <Authors>Zhimin(Rex) Ye</Authors>
 
         <PackageLicenseExpression>MIT</PackageLicenseExpression>        
-        <PackageIcon>icon.jpg</PackageIcon>
+        <PackageIcon>icon.png</PackageIcon>
         <PackageReadmeFile>readme.md</PackageReadmeFile>
     </PropertyGroup>
 
     <ItemGroup>        
-        <None Include="icon.jpg" Pack="true" PackagePath=""/>
+        <None Include="icon.png" Pack="true" PackagePath=""/>
         <None Include="../readme.md" Pack="true" PackagePath=""/>
     </ItemGroup>
 
