--- a/PulumiTestHelper/PulumiTestHelper.csproj
+++ b/PulumiTestHelper/PulumiTestHelper.csproj
@@ -1,6 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
+        <Version>0.1.0</Version>
         <TargetFramework>net6</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
